Bug 157000 - pdf crashes kpdf
Summary: pdf crashes kpdf
Status: RESOLVED FIXED
Alias: None
Product: kpdf
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Albert Astals Cid
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-01-31 01:05 UTC by Caleb Cushing
Modified: 2008-01-31 23:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
pdf that crashes okular/kpdf (349.36 KB, application/pdf)
2008-01-31 01:06 UTC, Caleb Cushing
Details
Valgrind log of kpdf on KDE-3.5.8 crashing on bug #157000 (27.77 KB, text/plain)
2008-01-31 05:09 UTC, Oliver Putz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Caleb Cushing 2008-01-31 01:05:43 UTC
Version:           0.6 (using KDE 4.0.0)
Installed from:    SuSE RPMs
OS:                Linux

when part of a bigger document (note: I've only given 1 page of a larger doc) kpdf and okular don't crash until they 'scan' this page. scan meaning first attempt to read it. they open and run as long as it hasn't attempted to read this page.

attaching page.
Comment 1 Caleb Cushing 2008-01-31 01:06:43 UTC
Created attachment 23377 [details]
pdf that crashes okular/kpdf
Comment 2 Oliver Putz 2008-01-31 05:08:11 UTC
I can confirm this bug with kde-3.5.8 as well as with a current KDE4 SVN build.
Comment 3 Oliver Putz 2008-01-31 05:09:03 UTC
Created attachment 23380 [details]
Valgrind log of kpdf on KDE-3.5.8 crashing on bug #157000
Comment 4 Pino Toscano 2008-01-31 23:52:34 UTC
Moving to KPDF, as it's not really an Okular-specific issue (xpdf/poppler). (The issue is being reported for Poppler, don't worry.)
Comment 5 Albert Astals Cid 2008-01-31 23:57:01 UTC
SVN commit 769259 by aacid:

Ensure we don't draw outside the main bitmap on SplashOutputDev::setSoftMask

BUG: 157000


 M  +6 -2      SplashOutputDev.cc  


WebSVN link: http://websvn.kde.org/?view=rev&revision=769259