Ensure we don't draw outside the main bitmap on SplashOutputDev::setSoftMask

BUG: 157000

svn path=/branches/KDE/3.5/kdegraphics/kpdf/; revision=769259